# pixels

./: .gitattributes  README.md  app.py  mock_pixels_data.json  pixels.py  pyproject.toml  requirements.txt
.github/workflows/: synctohuggingface.yml
