[tool.poetry]
name = "pixels_gradio"
version = "0.1.0"
description = ""
readme= "README.md"
authors = ["tobias <tobias.hoelzer@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.6"
pandas = "^2.2.1"
ipykernel = "^6.29.3"
plotly = "^5.20.0"
gradio = "^4.31.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
